# socket2

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
src/: cmsg.rs  lib.rs  sockaddr.rs  socket.rs  sockref.rs  tests.rs  unix.rs  utils.rs
src/sys/: unix.rs  wasi.rs  windows.rs
src/sys/redox/: mod.rs
src/sys/unix/: mod.rs  weak.rs
tests/: options.rs  socket.rs
tests/data/: lorem_ipsum.txt
