[package]
name = "socket2"
version = "0.3.19"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/socket2-rs"
homepage = "https://github.com/alexcrichton/socket2-rs"
description = """
Utilities for handling networking sockets with a maximal amount of configuration
possible intended.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[target."cfg(windows)".dependencies.winapi]
version = "0.3.3"
features = ["handleapi", "ws2def", "ws2ipdef", "ws2tcpip", "minwindef"]

[target."cfg(unix)".dependencies]
cfg-if = "1.0"
libc = { version = "0.2.66", features = ["align"] }

[dev-dependencies]
tempdir = "0.3"

[features]
reuseport = []
pair = []
unix = []
