[package]
name          = "socket2"
version       = "0.5.0"
publish       = false
authors       = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Thomas de Zeeuw <thomasdezeeuw@gmail.com>"
]
license       = "MIT OR Apache-2.0"
readme        = "README.md"
repository    = "https://github.com/rust-lang/socket2"
homepage      = "https://github.com/rust-lang/socket2"
documentation = "https://docs.rs/socket2"
description = """
Utilities for handling networking sockets with a maximal amount of configuration
possible intended.
"""
keywords      = ["io", "socket", "network"]
categories    = ["api-bindings", "network-programming"]
edition       = "2018"
include       = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "src/**/*.rs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["all"]

[target."cfg(unix)".dependencies]
libc = "0.2.124"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_WindowsProgramming",
]

[features]
# Enable all API, even ones not available on all OSs.
all = []

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
